[package]
name = "rust_ada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-display-derive = "0.1.1"
gpr = "0.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"

[dev-dependencies]
libloading = "0.5"

[build-dependencies]
git2 = "0.14"
